- add a help button, that sets a valid key/symbol to the player's key, to help out - fix, add a <br /> element for each new line, when adding the message - fix, remove all whitespace when comparing the messages, to determine if the message is decrypted

--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,27 @@
     opacity: 0.2;
     }
 
+.button:hover
+    {
+    background-color: rgba(143, 210, 163, 0.60);
+    }
+
+#Menu .button
+    {
+    padding: 2px 20px;
+    }
+
 #MessageContainer > *
     {
     text-align: center;
     display: inline-block;
     margin: 0;
-    min-width: 25px;
+    font-size: 20px;
     }
 
 #MessageContainer .MessageSpace
     {
-    width: 35px;
+    width: 30px;
     }
 
 body > *
